Naprawenie wyłączania serwera Minecraft, dodanie późnienia startu.

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -24,5 +24,6 @@ directory=/mcserver
 autostart=true
 user=mcserver
 stopsignal=TERM
-stdout_logfile=/tmp/supervisor/stdout.txt
+stopwaitsecs=10
+stopasgroup=true
 stderr_logfile=/tmp/supervisor/stderr.txt
