Przepisanie wszystkich funkcji na nowo, usprawnienie działania.

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -23,7 +23,6 @@ command=/bin/sh start-mcserver.sh
 directory=/mcserver
 autostart=true
 user=mcserver
-stopsignal=TERM
+stopsignal=INT
 stopwaitsecs=10
-stopasgroup=true
 stderr_logfile=/tmp/supervisor/stderr.txt
